--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@popperjs/core": "^2.4.0",
     "@stomp/stompjs": "^5.4.2",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
     "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
     "js-yaml": "^4.1.0",
