--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
+    "handlebars-helpers": "^0.10.0",
     "html-webpack-plugin": "^3.2.0",
     "immutable": "^3.8.2",
     "js-yaml": "^4.1.0",
