--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@popperjs/core": "^2.4.0",
     "@stomp/stompjs": "^5.4.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
@@ -37,6 +38,8 @@
     "mssql": "^7.2.1",
     "nodemon": "^2.0.12",
     "object-hash": "^1.1.5",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-immutable-proptypes": "^2.2.0",
     "react-markdown": "^4.2.2",
