--- a/public/trainData/config.yml
+++ b/public/trainData/config.yml
@@ -1,15 +1,15 @@
 pipeline:
   - name: SpacyNLP
     model: zh_core_web_lg
-  - name: SpacyTokenizer
-    intent_tokenization_flag: false
+  - name: JiebaTokenizer
+    dictionary_path: /app/dict
+    intent_tokenization_flag: true
     intent_split_symbol: _
     token_pattern: None
-  - name: SpacyFeaturizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: DucklingEntityExtractor
-    url: 'http://duckling:8000'
+    url: "http://duckling:8000"
     timezone: Asia/Taipei
     locale: zh_TW
     dimensions:
@@ -33,7 +33,7 @@ pipeline:
     constrain_similarities: true
   - name: FallbackClassifier
     threshold: 0.7
-    ambiguity_threshold: 0.1
+    ambiguity_threshold: 0.3
   - name: ResponseSelector
     epochs: 100
     retrieval_intent: faq
@@ -55,4 +55,4 @@ policies:
     core_fallback_action_name: action_default_fallback
     enable_fallback_prediction: true
   - name: AugmentedMemoizationPolicy
-    max_history: 6
+    max_history: 5
